Issue-#14: Update return type of exception throwing methods to throwables and make callers throw it.