@@ -20,9 +20,8 @@ public class FractionTest {
 		assertEquals(0, Fraction.compare(Fraction.zero, Fraction.subtract(new Fraction(1, 16), new Fraction(1, 16))));
 	}
 
-
 	@Test
 	public void test_subtract_02() {
-		assertEquals(new Double(-0.5), new Double(Fraction.subtract(new Fraction(1, 2), Fraction.one).doubleValue()));
+		assertEquals(Double.valueOf(-0.5), Double.valueOf(Fraction.subtract(new Fraction(1, 2), Fraction.one).doubleValue()));
 	}
 }
